fix: change FAV and NO. column alignment to left in Replay table

--- a/css/archive.css
+++ b/css/archive.css
@@ -351,8 +351,8 @@
 #archive-screen .col-date   { width: 30%; }
 
 /* Replay Table specific column widths */
-#archive-screen .col-fav    { width: 48px; text-align: center; }
-#archive-screen .col-no     { width: 48px; text-align: center; }
+#archive-screen .col-fav    { width: 40px; }
+#archive-screen .col-no     { width: 40px; }
 #archive-screen #tab-replays .col-sector { width: 15%; }
 #archive-screen #tab-replays .col-score  { width: 20%; }
 
